# fastapi-fastmcp

./: .gitignore  README.md  main.py  pyproject.toml
app/api/v1/: api_routes.py
app/api/v1/mcpchat/: mcp_chat_helper.py  mcp_chat_routes.py  mcp_chat_service.py
app/api/v1/ollama/: ollama_services.py
app/api/v1/sample/: sample_routes.py
app/core/: config.py
app/mcp/animal_mcp/: animal_server.py
app/mcp/animal_mcp/tools/: habitat_tool.py
app/mcp/sample_mcp/: sample_server.py
app/mcp/sample_mcp/tools/: caffee.py  calculation.py
app/models/v1/chat/: llm_chat_schema.py
